# practice2-EDD

ContactManagement/: CMakeLists.txt
ContactManagement/backend/: Menu.h  Parser.cpp  Parser.h  Reports.cpp
ContactManagement/backend/structures/: HashTable.cpp  HashTable.h  HashTableData.h
MakeFile/: Makefile  main.cpp
MakeFile/backend/: Menu.cpp  Reports.h
MakeFile/backend/structures/: AVLTree.cpp  AVLTree.h  HashTableData.cpp  Node.cpp  Node.h
